[package]
name = "vivid-engine"
version = "0.5.0"
edition = "2021"

[dependencies]
wayland-client = "0.31"
wayland-protocols-wlr = { version = "0.3", features = ["client"] }
image = { version = "0.25", default-features = false, features = ["png", "jpeg", "webp"] }
clap = { version = "4.5", features = ["derive"] }
memmap2 = "0.9"
tempfile = "3"
rand = "0.8"
rayon = "1.10" # 🚀 Added for ultra-fast parallel rendering

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
strip = true
panic = "abort"
